--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,6 +6,11 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    <nav>
+        <a href="{{ url_for('index') }}">Main</a>
+        <a href="{{ url_for('about') }}">About</a>
+    </nav>
+
     {% block content %}{% endblock %}
 </body>
 </html>
