--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,5 +3,5 @@
 {% block title %}Index page{% endblock %}
 
 {% block content %}
-    <h1>Weelcome to Index page. </h1>
+    <h1>Welcome to Index page. </h1>
 {% endblock %}
