--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -9,6 +9,8 @@
     <nav>
         <a href="{{ url_for('index') }}">Main</a>
         <a href="{{ url_for('about') }}">About</a>
+        <a href="{{ url_for('add_customer') }}">Add customer</a>
+        <a href="{{ url_for('add_car') }}">Add car</a>
     </nav>
 
     {% block content %}{% endblock %}
