--- a/project/templates/add_customer.html
+++ b/project/templates/add_customer.html
@@ -4,11 +4,26 @@
 
 {% block content %}
     <h1>Add New Customer </h1>
-    <form method="POST" action="/submit">
-        {{ form.first_name }}<br>
+    <form method="POST" action="{{ url_for('add_customer') }}">
+        {{ form.csrf_token }}
+        {{ form.first_name}}<br>
         {{ form.last_name }}<br>
-        {{ form.email }}<br>
-        {{ form.phone }}<br>
+        {{ form.email }}
+        {% if form.email.errors %}
+                {% for error in form.email.errors %}
+                    {{ error }}
+                {% endfor %}
+            {% endif %}<br>
+        
+        {{ form.phone }}
+            {% if form.phone.errors %}
+                {% for error in form.phone.errors %}
+                    {{ error }}
+                {% endfor %}
+            {% endif %}<br>
         {{ form.submit }}
     </form>
+    {% if message %}
+        {{ message }}
+    {% endif %} 
 {% endblock %}
