Implement update_car and update_customer route

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -11,6 +11,8 @@
         <a href="{{ url_for('about') }}">About</a>
         <a href="{{ url_for('add_customer') }}">Add customer</a>
         <a href="{{ url_for('add_car') }}">Add car</a>
+        <a href="{{ url_for('update_car') }}">Update car</a>
+        <a href="{{ url_for('update_customer') }}">Update customer</a>
     </nav>
     {% block content %}
 
