Implement view_cars and view_customers routes

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -13,6 +13,8 @@
         <a href="{{ url_for('add_car') }}">Add car</a>
         <a href="{{ url_for('update_car') }}">Update car</a>
         <a href="{{ url_for('update_customer') }}">Update customer</a>
+        <a href="{{ url_for('view_cars') }}">View cars</a>
+        <a href="{{ url_for('view_customers') }}">View customers</a>
     </nav>
     {% block content %}
 
