Create basic services route

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -15,6 +15,7 @@
         <a href="{{ url_for('update_customer') }}">Update customer</a>
         <a href="{{ url_for('view_cars') }}">View cars</a>
         <a href="{{ url_for('view_customers') }}">View customers</a>
+        <a href="{{ url_for('services') }}">Services</a>
     </nav>
     {% block content %}
 
